fix span txt wrapping

--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -96,7 +96,7 @@ ALERT / FLASH MESSAGE
     color: white;
     border: none;
     position: absolute;
-    width: 100%;
+    width: 80%;
     text-align: center;
     z-index: 1200;
     font-size: 2.5em;
@@ -220,6 +220,7 @@ DATE
 .span-txt {
     color: var(--dark-text);
     font-weight: 400;
+    overflow-wrap: break-word
 }
 
 .more-strong-txt {
